app/assets/stylesheets/product.scss
.kobe-image{
    width: 100%
}

.sneaker-container{
  outline: 1px solid black;
  margin-top: 1px;
  margin-left: 1px;
  width: 315px;
  height: 315px;
}

.sneaker-info{
  display: flex;
  flex-flow: wrap row;
  justify-content: center;
  margin-top: -1px;
  margin-left: -1px;
}

.sneaker-indexitem{
  display: flex;
  flex-flow: wrap row;
  justify-content: center;
  text-align: center;
  position: relative;
  margin: 0px 10%;
  font-family: 'Overpass', sans-serif;
  text-transform: uppercase;
  font-size: 11px;
  letter-spacing: 1px;
}

.release-date{
    padding-top: 10px;
    font-size: 20px;
}

.product-image{
     width: 100%;
//   height: 10%;
  margin-left: -30px;
  padding-top: 10%;
}

.sneaker-name{
    padding-top: 30px;
}

.product-ul{
    display: flex;
    flex-wrap: wrap;
}

